--- a/continuous_improvement/views/continuous_improvement_views.xml
+++ b/continuous_improvement/views/continuous_improvement_views.xml
@@ -143,9 +143,9 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
-                    <field name="stage_id"/>
                     <field name="assigned_id"/>
                     <field name="type_id"/>
+                    <field name="stage_id"/>
                 </tree>
             </field>
         </record>
@@ -154,11 +154,19 @@
         <field name="name">continuous.improvement.view.kanban</field>
         <field name="model">continuous.improvement</field>
         <field name="arch" type="xml">
-            <kanban default_group_by="stage_id">
-                <field name="stage_id"/>
-                <field name="name"/>
-                <field name="assigned_id"/>
-                <field name="type_id"/>
+            <kanban class="o_kanban_mobile">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="oe_kanban_global_click">
+                            <div>
+                                <strong><field name="name"/></strong>
+                                <field name="stage_id"/>
+                                <field name="assigned_id"/>
+                                <field name="type_id"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
             </kanban>
         </field>
         </record>
