--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -130,13 +130,13 @@
                   <group>
                       <group>
                           <field name="technical_file_id" widget="many2one"/>
-                          <field name="type_area_id" widget="many2one"/>
+                          <field name="sales_team_id" widget="many2one"/>
                       </group>
                       <group>
-                        <field name="group_id" widget="many2one"/>
+                        <field name="responsible_id" widget="many2one"/>
                       </group>
                   </group>
-                  <field name='description' placeholder="Description ......."/>
+                  <field name='observation' placeholder="Observation ......."/>
               </sheet>
               </form>
             </field>
