--- a/equipment/views/equipment.xml
+++ b/equipment/views/equipment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-        <template id="equipments_backend" name="equipment equipments" inherit_id="web.equipments_backend">
+        <template id="assets_backend" name="equipment equipments" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/equipment/static/src/css/equipment.css"/>
             </xpath>
