--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -317,66 +317,64 @@
             <field name="view_mode">tree</field>
         </record>
 
+<!-- Equipment Menu -->
 
-				<!-- Top menu item -->
-        <menuitem name="Technical Support"
-            id="base.menu_technical_support_root"
-            sequence="80"/>
-
-        <!-- Equipment menu -->
+        <!-- Equipment menu Icon-->
         <menuitem
 						name="Equipments"
-            id="menu_maintenance_equipments"
+            id="menu_equipment"
             groups="equipment.group_technical_support_customer"
 						web_icon="equipment,static/description/icon.png"
             sequence="90"/>
 
-        <!-- Equipment Tags item -->
-        <menuitem name="Equipment Tags"
-            action="action_equipment_category"
-            id="menu_equipment_category"
-            parent="menu_maintenance_config"
-            groups="equipment.group_technical_support_manager"
-            sequence="100"/>
+				<!-- Equipment item -->
+				<menuitem name="Equipments"
+						action="action_equipments"
+						id="menu_maintenance_equipments_equipments"
+						parent="menu_equipment"
+						groups="equipment.group_technical_support_customer"
+						sequence="100"/>
 
-					<!-- Equipment state item -->
-		       <menuitem name="Equipment States"
-		            action="action_equipment_state"
-		            id="menu_equipment_state"
-		            parent="menu_maintenance_config"
-		            groups="equipment.group_technical_support_manager"
-		            sequence="100"/>
+				<!-- Management equipment item -->
+				<menuitem name="Manage states"
+						action="action_management_equipments"
+						id="menu_equipments_states"
+						parent="menu_equipment"
+						groups="equipment.group_technical_support_user"
+						sequence="100"/>
 
+				<!-- Report menu -->
+				<menuitem name="Reports"
+						id="menu_equipment_report"
+						parent="menu_equipment"
+						groups="equipment.group_technical_support_customer"
+						sequence="30"/>
 
-								        <!-- Management equipment item -->
-								        <menuitem name="Manage states"
-								            action="action_management_equipments"
-								            id="menu_maintenance_equipments_management"
-								            parent="menu_maintenance_equipments"
-								            groups="equipment.group_technical_support_user"
-								            sequence="100"/>
+				<!-- Configuration menu -->
+				<menuitem
+						name="Configuration"
+						id="menu_equipment_config"
+						parent="menu_equipment"
+						groups="equipment.group_technical_support_manager"
+						sequence="200"/>
 
-								        <!-- Report menu -->
-								        <menuitem name="Reports"
-								            id="menu_maintenance_report"
-								            parent="menu_maintenance_equipments"
-								            groups="equipment.group_technical_support_customer"
-								            sequence="30"/>
+				<!-- Equipment Tags item -->
+		    <menuitem
+						name="Tags"
+		        action="action_equipment_category"
+		        id="menu_equipment_category"
+		        parent="menu_equipment_config"
+		        groups="equipment.group_technical_support_manager"
+		        sequence="100"/>
 
-								        <!-- Configuration menu -->
-								        <menuitem name="Configuration"
-								            id="menu_maintenance_config"
-								            parent="menu_maintenance_equipments"
-								            groups="equipment.group_technical_support_manager"
-								            sequence="200"/>
-
-														<!-- Equipment item -->
-										        <menuitem name="Equipments"
-										            action="action_equipments"
-										            id="menu_maintenance_equipments_equipments"
-										            parent="menu_maintenance_equipments"
-										            groups="equipment.group_technical_support_customer"
-										            sequence="100"/>
+			  <!-- Equipment state item -->
+				<menuitem
+						name="States"
+				    action="action_equipment_state"
+				    id="menu_equipment_state"
+				    parent="menu_equipment_config"
+				    groups="equipment.group_technical_support_manager"
+				    sequence="100"/>
 
  	</data>
 </openerp>
