--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -72,6 +72,45 @@
                                     </group>
                                 </group>
                             </page>
+														<page string="Softwares">
+		                            <field name="software_ids" >
+		                                 <tree editable="bottom">
+		                                    <field name="name" />
+		                                    <field name="software_id"/>
+		                                </tree>
+		                            </field>
+		                        </page>
+		                        <page string="Network">
+		                            <field name="network_ids" >
+		                                 <tree editable="bottom">
+		                                    <field name="name" />
+		                                    <field name="subred"/>
+		                                    <field name="gateway"/>
+		                                    <field name="dns1"/>
+		                                    <field name="dns2"/>
+		                                    <field name="mac_address"/>
+		                                </tree>
+		                            </field>
+		                        </page>
+		                        <page string="Dicom">
+		                            <field name="dicom_ids" >
+		                                 <tree editable="bottom">
+		                                    <field name="name" />
+		                                    <field name="ip"/>
+		                                    <field name="port"/>
+		                                    <field name="dicom_type_id"/>
+		                                </tree>
+		                            </field>
+		                        </page>
+		                        <page string="Accesory">
+		                            <field name="child_ids" >
+		                                 <tree editable="bottom">
+		                                    <field name="name" />
+		                                    <field name="brand_id"/>
+		                                    <field name="model_id"/>
+		                                </tree>
+		                            </field>
+		                        </page>
                         </notebook>
                      </sheet>
                      <div class="oe_chatter">
