--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <odoo>
-    	<record id="helpdesk_ticket_form_view" model="ir.ui.view">
+    	<record id="helpdesk_ticket_form_view_inherited" model="ir.ui.view">
             <field name="name">helpdesk.ticket.form.view.inherited</field>
             <field name="model">helpdesk.ticket</field>
             <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
@@ -18,7 +18,7 @@
                         </div>
                     </button>
                 </button>
-                <xpath expr="//field[@name='partner_name']" position="after">
+                <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="equipment_id"/>
                 </xpath>
 
